@@ -724,3 +724,9 @@
 - Updated the respawn time of Loose Soil.
 - Updated the respawn time of Ancient Relic.
 - Updated the flags of Turtle Meat to allow all members of a group to loot it.
+
+[2024-07-11]
+- Updated the smart script for Kalaran Windblade to give all members of a group credit for the quest The Torch of Retribution.
+
+[2024-07-18]
+- Updated the respawn time of Highborne Relic Fragment.
